--- a/README.rdoc
+++ b/README.rdoc
@@ -1,11 +1,15 @@
-== README
+== C|R|M Books :octocat:
+
+{<img src="https://travis-ci.org/crmis/crm-books.svg?branch=master" alt="Build Status" />}[https://travis-ci.org/crmis/crm-books]
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
 Things you may want to cover:
 
-* Ruby version
+* Ruby version 2.1.5
+
+* Rails version 4.1.8
 
 * System dependencies
 
@@ -20,8 +24,6 @@ Things you may want to cover:
 * Services (job queues, cache servers, search engines, etc.)
 
 * Deployment instructions
-
-* ...
 
 
 Please feel free to use a different markup language if you do not plan to run
