--- a/README.rdoc
+++ b/README.rdoc
@@ -8,7 +8,7 @@ This README would normally document whatever steps are necessary to get the
 application up and running.
 
 Things you may want to cover:
-ff
+
 * Ruby version 2.1.5
 
 * Rails version 4.1.8
@@ -19,7 +19,7 @@ ff
 
 * Database creation
 
-* Database initialization
+* Development database is set to - localhost:27017. On OSX run $mongod and for Ubuntu/Debian run $sudo service mongod start.
 
 * How to run the test suite
 
